# core

./: .env.example  Dockerfile  LINT_FIX_SUMMARY.md  LINT_TEST_REPORT.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  deploy.yml  nightly.yml  pr-checks.yml  release.yml
core/: __init__.py  client.py  config.py  exceptions.py
core/api/: __init__.py  app.py  dependencies.py
core/api/v1/: accounts.py  compliance.py  customers.py  organizations.py  payments.py  regulatory.py  transactions.py  users.py
core/models/: __init__.py  account.py  branch.py  card.py  compliance.py  customer.py  organization.py  payment.py  regulatory.py  rules.py  transaction.py  user.py
core/repositories/: __init__.py  formance.py
core/services/: __init__.py  accounts.py  branches.py  cards.py  compliance.py  customers.py  ledger.py  organizations.py  payments.py  regulatory.py  transactions.py  users.py
core/utils/: logging.py  retry.py  sanctions.py  validators.py
core/workers/: __init__.py  compliance_reconciliation.py  regulatory_reporting.py
docker/: docker-compose.yml
docs/: ARCHITECTURE_OVERVIEW.md  COMPLIANCE_ENGINE.md  DEVELOPER_TESTING_README.md  FORMANCE_INTEGRATION.md  IMPLEMENTATION_ROADMAP.md  MOBILE_MONEY.md  MULTI_BRANCH_ARCHITECTURE.md  MULTI_BRANCH_IMPLEMENTATION_STATUS.md  ORGANIZATIONS_AND_USERS.md  REGULATORY_REPORTING.md  REGULATORY_REPORTING_IMPLEMENTATION.md  REGULATORY_REPORTING_QUICKSTART.md  TESTING_GUIDE.md
docs/examples/: complete_test_example.py  formance_repository_example.py
docs/validation/: EXECUTIVE_SUMMARY.md  MEETING_AGENDA.md  PROJECT_OVERVIEW.md  README.md  TECHNICAL_DECISION_LOG.md  TOOLS_AND_INFRASTRUCTURE.md
scripts/: check.sh  format.sh  lint.sh  start.sh
tests/: __init__.py  conftest.py  factories.py
tests/e2e/: test_api_endpoints.py
tests/integration/: test_account_service.py
tests/unit/: test_models.py  test_regulatory.py  test_validators.py
