[project]
name = "baas-core-banking"
version = "0.1.0"
description = "Banking as a Service Core Banking System built on Formance"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "formance-sdk-python>=6.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "faker>=34.0.0",
    "ruff>=0.11.2",
    "mypy>=1.14.0",
]

[tool.uv]
required-version = "==0.9.16"
